test/force-app/main/default/objects/Publication_Simap__c/Publication_Simap__c.object-meta.xml
<CustomObject>
    <label>Publication Simap</label>
    <nameField>
        <label>Publication Simap Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publications Simap</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>