test/force-app/main/default/objects/Publication_Simap__c/fields/Adresse_contact__c.field-meta.xml
<CustomField>
    <fullName>Adresse_contact__c</fullName>
    <label>Adresse contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>