test/force-app/main/default/objects/Publication_Simap__c/fields/Adresse_contact_formatee__c.field-meta.xml
<CustomField>
    <fullName>Adresse_contact_formatee__c</fullName>
    <label>Adresse contact formatee</label>
    <type>Address</type>
</CustomField>