test/force-app/main/default/objects/Publication_Simap__c/fields/Adresse_de_l_offre__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_l_offre__c</fullName>
    <label>Adresse de l&apos;offre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>