test/force-app/main/default/objects/Publication_Simap__c/fields/Adresse_de_l_offre_formatee__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_l_offre_formatee__c</fullName>
    <label>Adresse de l offre formatee</label>
    <type>Address</type>
</CustomField>