test/force-app/main/default/objects/Publication_Simap__c/fields/Bureau_d_achat__c.field-meta.xml
<CustomField>
    <fullName>Bureau_d_achat__c</fullName>
    <label>Bureau d&apos;achat</label>
    <length>200</length>
    <type>Text</type>
</CustomField>