test/force-app/main/default/objects/Publication_Simap__c/fields/Contact_bureau_d_achat__c.field-meta.xml
<CustomField>
    <fullName>Contact_bureau_d_achat__c</fullName>
    <label>Contact bureau d'achat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>