test/force-app/main/default/objects/Publication_Simap__c/fields/Corrige__c.field-meta.xml
<CustomField>
    <fullName>Corrige__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corrigé</label>
    <type>Checkbox</type>
</CustomField>