test/force-app/main/default/objects/Publication_Simap__c/fields/Denomination_CPV__c.field-meta.xml
<CustomField>
    <fullName>Denomination_CPV__c</fullName>
    <label>Denomination CPV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>