test/force-app/main/default/objects/Publication_Simap__c/fields/Email_contact__c.field-meta.xml
<CustomField>
    <fullName>Email_contact__c</fullName>
    <label>Email contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>