test/force-app/main/default/objects/Publication_Simap__c/fields/Lieu_d_execution__c.field-meta.xml
<CustomField>
    <fullName>Lieu_d_execution__c</fullName>
    <label>Lieu d&apos;exécution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>