test/force-app/main/default/objects/Publication_Simap__c/fields/Nom_service_demandeur__c.field-meta.xml
<CustomField>
    <fullName>Nom_service_demandeur__c</fullName>
    <label>Nom service demandeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>