test/force-app/main/default/objects/Publication_Simap__c/fields/Numero_de_projet__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_projet__c</fullName>
    <label>Numero de projet</label>
    <length>200</length>
    <type>Text</type>
</CustomField>