test/force-app/main/default/objects/Publication_Simap__c/fields/Numero_de_publication__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_publication__c</fullName>
    <label>Numero de publication</label>
    <length>200</length>
    <type>Text</type>
</CustomField>