test/force-app/main/default/objects/Publication_Simap__c/fields/offre_canton__c.field-meta.xml
<CustomField>
    <fullName>offre_canton__c</fullName>
    <label>Canton de l&apos;offre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>