test/force-app/main/default/objects/Publication_Simap__c/fields/procOfficeName__c.field-meta.xml
<CustomField>
    <fullName>procOfficeName__c</fullName>
    <label>procOfficeName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>