test/force-app/main/default/objects/Publication_Simap__c/fields/projectNumber__c.field-meta.xml
<CustomField>
    <fullName>projectNumber__c</fullName>
    <label>projectNumber</label>
    <length>200</length>
    <type>Text</type>
</CustomField>