test/force-app/main/default/objects/Publication_Simap__c/fields/publicationDate__c.field-meta.xml
<CustomField>
    <fullName>publicationDate__c</fullName>
    <label>publicationDate</label>
    <type>DateTime</type>
</CustomField>