test/force-app/main/default/objects/Publication_Simap__c/fields/publicationDetailId__c.field-meta.xml
<CustomField>
    <fullName>publicationDetailId__c</fullName>
    <label>publicationDetailId</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>