test/force-app/main/default/objects/Publication_Simap__c/fields/publicationNumber__c.field-meta.xml
<CustomField>
    <fullName>publicationNumber__c</fullName>
    <label>publicationNumber</label>
    <length>200</length>
    <type>Text</type>
</CustomField>