test/force-app/main/default/objects/Publication_Simap__c/fields/Reference_de_l_offre__c.field-meta.xml
<CustomField>
    <fullName>Reference_de_l_offre__c</fullName>
    <label>Reference de l&apos;offre</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>