test/force-app/main/default/objects/Publication_Simap__c/fields/TestCanton__c.field-meta.xml
<CustomField>
    <fullName>TestCanton__c</fullName>
    <label>TestCanton</label>
    <length>255</length>
    <type>Text</type>
</CustomField>