test/force-app/main/default/objects/Publication_Simap__c/fields/Type_de_projet__c.field-meta.xml
<CustomField>
    <fullName>Type_de_projet__c</fullName>
    <label>Type de projet</label>
    <length>200</length>
    <type>Text</type>
</CustomField>