test/force-app/main/default/objects/Publication_Simap__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <label>Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>