test/force-app/main/default/objects/Publication_Simap__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Titre_de_publication__c</columns>
    <columns>Numero_de_projet__c</columns>
    <columns>Projet__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les publications</label>
</ListView>