test/force-app/main/default/objects/Publication_Simap__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Tous</label>
</ListView>