test/force-app/main/default/objects/Publication_Simap__c/listViews/Test.listView-meta.xml
<ListView>
    <fullName>Test</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Test</label>
</ListView>